Fixes navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -405,7 +405,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   .bk-pt-default .widget.extendednavigation ul li {
     float: left;
     border-bottom: 1px solid darken(@color-swatch7,5%);
-    padding: 16px 0;
+    padding: 16px 35px;
   }
 
   .bk-pt-default .widget.extendednavigation ul li:last-child {
@@ -418,10 +418,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
   .bk-pt-default .widget.extendednavigation ul li:hover .text {
     color: @font-swatch6-color;
-  }
-
- .bk-pt-default .widget.extendednavigation ul li.folder {
-    padding: 16px 0;
   }
 
   .bk-pt-default .widget .extendednavigation li {
@@ -904,7 +900,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     background-repeat: no-repeat;
     cursor: pointer;
     &:after {
-	    top: 18px;
+	    top: 44%;
 		right: 10px;
     }
 }
@@ -2326,7 +2322,6 @@ hr.line.align-right {
   .widget.extendednavigation ul li {
     float: left;
     border-bottom: 1px solid @color-swatch6;
-    padding: 16px 0;
   }
 
    .widget.extendednavigation ul li:last-child {
@@ -2339,14 +2334,6 @@ hr.line.align-right {
 
   .widget.extendednavigation ul li:hover .text {
     color: @font-swatch6-color;
-  }
-
-  .widget.extendednavigation ul li.folder {
-    padding: 16px 0;
-  }
-
-   .widget.extendednavigation ul li.folder:hover {
-    padding: 16px 0 0;
   }
 
   .widget .extendednavigation li {
